...
  const { onlineUserIdSet } = useOnlineUsersContext();
  const otherOnlineCount = onlineUserIdSet.has(userId || "")
    ? onlineUserIdSet.size - 1
    : onlineUserIdSet.size;

  return (
    <View testID="chats-screen" style={styles.safeArea}>
      <View style={styles.header}>
        <View>
          <UIText size="xxl" weight="bold">
            Chats
          </UIText>
          {otherOnlineCount > 0 && (
...
