...
      <View style={styles.authSection}>
        <GoogleButton />
        {/*
        <UIButton
          variant="ghost"
          size="medium"
          testID="guest-login-button"
          onPress={async () => {
            const { error } = await supabase.auth.signInWithPassword({
              email: "test@example.com",
              password: "password123",
            });
            if (!error) {
...
