...
          <View style={styles.footerRow}>
            <UIButton
              variant="ghost"
              onPress={handleResetFilters}
              style={styles.resetBtn}
            >
              <UIText color="text">Reset</UIText>
            </UIButton>
            <UIButton onPress={handleChangeFilters} style={styles.applyBtn}>
              <UIText color="white">Show Results</UIText>
            </UIButton>
          </View>
        }
      >
        <View style={styles.content}>
          <View style={styles.section}>
...
