...
      <Ionicons
        name="logo-google"
        color={styles.googleIcon.color}
        size={styles.googleIcon.size}
      />
      <UIText size="md" weight="semibold">
        Continue with Google
      </UIText>
    </UIButton>
  );
};

const styles = StyleSheet.create((theme) => ({
...
