appId: com.kyrylokap.autoraj
---
- launchApp

- runFlow:
    when:
      visible: "Allow"
    commands:
      - tapOn: "Allow"

- runFlow:
    when:
      visible:
        id: "guest-login-button"
    commands:
      - tapOn:
          id: "guest-login-button"
      - extendedWaitUntil:
          visible:
            id: "search-car-list"
          timeout: 20000

- assertVisible:
    id: "search-car-list"

- tapOn: "Chats"
- assertVisible:
    id: "chats-screen"

- tapOn: "Profile"
- assertVisible:
    id: "profile-screen"

- tapOn: "Search"
- assertVisible:
    id: "search-car-list"
