appId: com.kyrylokap.autoraj
---
- launchApp:
    clearState: true

- startRecording: app-launch-login

- runFlow:
    when:
      visible: "Allow"
    commands:
      - tapOn: "Allow"

- assertVisible:
    id: "guest-login-button"

- tapOn:
    id: "guest-login-button"

- extendedWaitUntil:
    visible:
      id: "search-car-list"
    timeout: 20000

- assertVisible:
    id: "filter-button"

- stopRecording
