appId: com.kyrylokap.autoraj
---
- launchApp

- runFlow:
    when:
      visible: "Allow"
    commands:
      - tapOn: "Allow"

- runFlow:
    when:
      visible:
        id: "guest-login-button"
    commands:
      - tapOn:
          id: "guest-login-button"
      - extendedWaitUntil:
          visible:
            id: "search-car-list"
          timeout: 20000

- tapOn: "Search"

- tapOn:
    id: "filter-button"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: "bottom-sheet-content"
    timeout: 10000
- assertVisible:
    id: "sheet-title"
- tapOn: "Reset"
- tapOn: "Show Results"

- assertVisible:
    id: "filter-button"
