appId: com.kyrylokap.autoraj
---
- launchApp

- runFlow:
    when:
      visible: "Allow"
    commands:
      - tapOn: "Allow"

- runFlow:
    when:
      visible:
        id: "guest-login-button"
    commands:
      - tapOn:
          id: "guest-login-button"
      - extendedWaitUntil:
          visible:
            id: "search-car-list"
          timeout: 20000

- tapOn: "Profile"
- assertVisible:
    id: "profile-screen"

- tapOn: "My vehicles"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: "bottom-sheet-content"
    timeout: 10000
- assertVisible:
    id: "sheet-title"

- swipe:
    direction: down

- assertVisible:
    id: "profile-screen"

- tapOn: "Sell vehicle"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: "bottom-sheet-content"
    timeout: 10000
- assertVisible:
    id: "sheet-title"

- tapOn: "Cancel"

- assertVisible:
    id: "profile-screen"

- tapOn: "Favorites"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: "bottom-sheet-content"
    timeout: 10000
- assertVisible:
    id: "sheet-title"

- swipe:
    direction: down
